mobx引入方式修改

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
       "@cps": [
         "components/index"
       ],
-      "@mobx/*": [
-        "mobx/*"
+      "@rootMobx": [
+        "mobx/rootMobx.ts"
       ],
       "@api": [
         "api/index"
